# oaks

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DATA_LICENSE  LICENSE  Makefile  README.md  RELEASING.md  browse.html  fly.toml  go.work  quercus_data.json  schema.md  schema.sql  version.json
cli/: .golangci.yml  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  go.mod  go.sum  integration_test.go  main.go  oak_compendium.db  publish.sh
cli/cmd/: add_value.go  config.go  delete.go  edit.go  export.go  find.go  generate_bear_notes.go  import_bear.go  import_bulk.go  import_bulk_test.go  import_oaksoftheworld.go  new.go  note.go  remove_from_array.go  root.go  serve.go  source.go  taxa.go  version.go
cli/data/: quercus-species.yaml  quercus-taxonomy.yaml
cli/docs/: api.md  infraspecific-ranks.md  oak_cli.md  openapi.yaml  security.md
cli/internal/api/: auth.go  auth_test.go  errors.go  export.go  export_test.go  health.go  health_test.go  integration_test.go  middleware.go  middleware_test.go  response.go  response_test.go  server.go  server_test.go  sources.go  sources_test.go  species.go  species_sources.go  species_sources_test.go  species_test.go  taxa.go  taxa_test.go
cli/internal/client/: client.go  client_test.go  export.go  export_test.go  sources.go  sources_test.go  species.go  species_test.go  taxa.go  taxa_test.go  types.go
cli/internal/config/: config.go  config_test.go
cli/internal/db/: db.go  (+1 more)
cli/schema/: export_schema.json  oak_schema.json
cli/src/: db.rs  editor.rs  main.rs  models.rs  schema.rs
(+911 files in other folders)
